Move all the Cplate_6well inspos data config/ user/
This moves the data file to the config/ and user/ dirs.
This also includes changing the name of the data file
in config/c00.config.

--- a/config/c00.config
+++ b/config/c00.config
@@ -1,7 +1,7 @@
 
 
 
-!fname_plate_6well_inspos_list c01_inspos.list
+!fname_plate_6well_inspos_list plate_6well_inspos.data
 # This file is copied from z02_plate_6well_inspos.data
 # It has an unforgiving format.  Must be copied exactly
 # except stuff could be added at end with no harm.
