Move the locup pattern files to the config dir
Since it's now possible to name the file in the locup.config, we can
put the files directly in the config dir.  Like that, they don't
have to be copied to the user/ dir to be used.

Also added a README.txt file to the examples dir just so it wouldn't
be empty.  I don't want git to loose that dir.

--- a/config/locup.config
+++ b/config/locup.config
@@ -4,5 +4,10 @@
 !culture_diam 9170
 
 !pattern_file locup_pattern.data
+# !pattern_file locup_pattern_01_horiz10_ns_margin_1.data
+# !pattern_file locup_pattern_02_horiz10_ns_margin_2.data
+# !pattern_file locup_pattern_03_central_6.data
+# !pattern_file locup_pattern_04_central_8.data
+
 
 
