Add new "wide" pattern files to locup system

--- a/config/locup.config
+++ b/config/locup.config
@@ -8,6 +8,8 @@
 # !pattern_file locup_pattern_02_horiz10_ns_margin_2.data
 # !pattern_file locup_pattern_03_central_6.data
 # !pattern_file locup_pattern_04_central_8.data
+# !pattern_file locup_pattern_05_central_6_wide.data
+# !pattern_file locup_pattern_06_central_8_wide.data
 
 
 
