--- a/config/locup.config
+++ b/config/locup.config
@@ -10,6 +10,8 @@
 # !pattern_file locup_pattern_04_central_8.data
 # !pattern_file locup_pattern_05_central_6_wide.data
 # !pattern_file locup_pattern_06_central_8_wide.data
+# !locup_pattern_07.data   # large millicell, 6 FOVs
+# !locup_pattern_08.data   # large millicell, 8 FOVs
 
 
 
