Move new muwp plate data files to config dir

--- a/config/muwp.config
+++ b/config/muwp.config
@@ -1,6 +1,8 @@
 
 
-!fname_plate muwp_plate.data
+# !fname_plate muwp_plate_01_well6_holder.data
+!fname_plate muwp_plate_02_ladiholder.data
+
 
 # This is here to allow users to manually change them
 # in their user/muwp.config.
