--- a/config/locup.config
+++ b/config/locup.config
@@ -3,15 +3,15 @@
 # 12 mm millicell.
 !culture_diam 9170
 
-!pattern_file locup_pattern.data
-# !pattern_file locup_pattern_01_horiz10_ns_margin_1.data
-# !pattern_file locup_pattern_02_horiz10_ns_margin_2.data
-# !pattern_file locup_pattern_03_central_6.data
-# !pattern_file locup_pattern_04_central_8.data
-# !pattern_file locup_pattern_05_central_6_wide.data
-# !pattern_file locup_pattern_06_central_8_wide.data
-# !locup_pattern_07.data   # large millicell, 6 FOVs
-# !locup_pattern_08.data   # large millicell, 8 FOVs
+!pattern_file locup/pattern.data
+# !pattern_file locup/pattern_01_horiz10_ns_margin_1.data
+# !pattern_file locup/pattern_02_horiz10_ns_margin_2.data
+# !pattern_file locup/pattern_03_central_6.data
+# !pattern_file locup/pattern_04_central_8.data
+# !pattern_file locup/pattern_05_central_6_wide.data
+# !pattern_file locup/pattern_06_central_8_wide.data
+# !locup/pattern_07.data   # large millicell, 6 FOVs
+# !locup/pattern_08.data   # large millicell, 8 FOVs
 
 
 
