Add calibration files to muwp plate system
Also, move plate data files from
  config/
to
  config/muwp

And a few other minor change.
Only one calibration has been added ca03 for well6_holder 3.

--- a/config/muwp.config
+++ b/config/muwp.config
@@ -1,8 +1,10 @@
 
 
-# !fname_plate muwp_plate_01_well6_holder.data
-!fname_plate muwp_plate_02_ladiholder.data
+# !fname_plate muwp/plate_01_w6h.data
+!fname_plate muwp/plate_02_ladiholder.data
 
+# Specific calibrations:
+# !fname_plate muwp/plate_01_w6h_ca03.data  # for well6_holder 3
 
 # This is here to allow users to manually change them
 # in their user/muwp.config.
