Use a new value for the diam of 12mm millicell
This was from a measurement done after 2022 xp0060.

--- a/config/locup.config
+++ b/config/locup.config
@@ -1,7 +1,8 @@
 
 
+# !culture_diam 9170  Old value, maybe for another type of insert?
 # 12 mm millicell.
-!culture_diam 9170
+!culture_diam 8770
 
 !pattern_file locup/pattern.data
 # !pattern_file locup/pattern_01_horiz10_ns_margin_1.data
