Clean up locup patterns and add new ones

--- a/config/locup.config
+++ b/config/locup.config
@@ -1,18 +1,48 @@
 
 
-# !culture_diam 9170  Old value, maybe for another type of insert?
-# 12 mm millicell.
-!culture_diam 8770
+!culture_diam 23000      # large (30mm, 23mm membrane) millicell
+# !culture_diam 24000    # large transwell
+# !culture_diam 8770     # 12mm millicell
 
-!pattern_file locup/pattern.data
-# !pattern_file locup/pattern_01_horiz10_ns_margin_1.data
-# !pattern_file locup/pattern_02_horiz10_ns_margin_2.data
-# !pattern_file locup/pattern_03_central_6.data
-# !pattern_file locup/pattern_04_central_8.data
-# !pattern_file locup/pattern_05_central_6_wide.data
-# !pattern_file locup/pattern_06_central_8_wide.data
-# !locup/pattern_07.data   # large millicell, 6 FOVs
-# !locup/pattern_08.data   # large millicell, 8 FOVs
+# !culture_diam 8770   # 12mm millicell
+# 12 mm millicell:
+# - From 2022 xp0606 after xp tests, diam is 8770.
+# - The 9170 is an older value, not sure if it's useful for something.
+
+
+
+!pattern_file locup/pattern_05.data  # Default
+
+# For small millicells:
+# !pattern_file locup/pattern_01.data  # horiz10 plus N S, margin 1
+# !pattern_file locup/pattern_02.data  # horiz10 plus N S, margin 2 (larger)
+# !pattern_file locup/pattern_03.data  # central 6
+# !pattern_file locup/pattern_04.data  # central 8
+# !pattern_file locup/pattern_05.data  # central 6, wide spacing
+# !pattern_file locup/pattern_06.data  # central 8, wide spacing
+
+# For large millicells:
+# !pattern_file locup/pattern_07.data   # 6 central FOVs
+# !pattern_file locup/pattern_08.data   # 8 central FOVs
+
+# For large millicell MCTDs:
+# !pattern_file locup/pattern_09.data  # 2 FOV, N S
+# !pattern_file locup/pattern_10.data  # 4 FOV (N W S E)
+# !pattern_file locup/pattern_11.data  # 8 FOV (N NW ... E NE)
+# !pattern_file locup/pattern_14.data  # 40 FOVs
+# !pattern_file locup/pattern_15.data  # 40 FOVs, cw (follows u-)
+
+# For large transwell MCTDs:
+# !pattern_file locup/pattern_12.data # 8 FOVs
+# !pattern_file locup/pattern_13.data # 4 FOVs (N W S E)
+# !pattern_file locup/pattern_16.data # 4 FOV plus return N.
+# !pattern_file locup/pattern_17.data # 8 FOV plus return N.
+# !pattern_file locup/pattern_18.data # 4 FOV plus return N, cw (same as u-).
+# !pattern_file locup/pattern_19.data # 8 FOV plus return N, cw (same as u-).
+# !pattern_file locup/pattern_20.data # 4 FOV, cw (same as u-).
+# !pattern_file locup/pattern_21.data # 8 FOV, cw (same as u-).
+
+
 
 
 
