Add a muwp 96-well plate

--- a/config/locup.config
+++ b/config/locup.config
@@ -3,6 +3,7 @@
 !culture_diam 23000      # large (30mm, 23mm membrane) millicell
 # !culture_diam 24000    # large transwell
 # !culture_diam 8770     # 12mm millicell
+# !culture_diam 5940     # well from 96-well plate (2022 ipro 0120v12a au 0819a)
 
 # !culture_diam 8770   # 12mm millicell
 # 12 mm millicell:
