Add 24w plate and 6.5mm T-clear pattern
Also some cleanup in aconfig file.

--- a/config/locup.config
+++ b/config/locup.config
@@ -2,13 +2,10 @@
 
 !culture_diam 23000      # large (30mm, 23mm membrane) millicell
 # !culture_diam 24000    # large transwell
-# !culture_diam 8770     # 12mm millicell
+# !culture_diam 8770     # 12mm millicell, 2022 xp0606 after xp tests.
 # !culture_diam 5940     # well from 96-well plate (2022 ipro 0120v12a au 0819a)
-
-# !culture_diam 8770   # 12mm millicell
-# 12 mm millicell:
-# - From 2022 xp0606 after xp tests, diam is 8770.
-# - The 9170 is an older value, not sure if it's useful for something.
+# !culture_diam 15539    # well from 24-well plate (2023 ipro 0201v10a au/0201a.
+# !culture_diam 6400     # 6.5 mm t-clear, rough, 2023 xp 0118v07a au/0118a.
 
 
 
@@ -42,7 +39,7 @@
 # !pattern_file locup/pattern_19.data # 8 FOV plus return N, cw (same as u-).
 # !pattern_file locup/pattern_20.data # 4 FOV, cw (same as u-).
 # !pattern_file locup/pattern_21.data # 8 FOV, cw (same as u-).
-
+# !pattern_file locup/pattern_22.data # 8 central FOV, 6.5 mm t-clear.
 
 
 
