Change locup config format, uses ;
Same change as for muwp.

--- a/config/locup.config
+++ b/config/locup.config
@@ -1,46 +1,57 @@
 
 
-!culture_diam 23000      # large (30mm, 23mm membrane) millicell
-# !culture_diam 24000    # large transwell
-# !culture_diam 8770     # 12mm millicell, 2022 xp0606 after xp tests.
-# !culture_diam 5940     # well from 96-well plate (2022 ipro 0120v12a au 0819a)
-# !culture_diam 15539    # well from 24-well plate (2023 ipro 0201v10a au/0201a.
-# !culture_diam 6400     # 6.5 mm t-clear, rough, 2023 xp 0118v07a au/0118a.
+!culture_diam ;  8770 ; # 12mm millicell *8770.
+!culture_diam ;  5940 ; # well from 96-well plate *5940
+!culture_diam ;  6400 ; # 6.5 mm t-clear, rough *6400.
+!culture_diam ; 15539 ; # well from 24-well plate *15539.
+!culture_diam ; 23000 ; # large (30mm, 23mm membrane) millicell
+!culture_diam ; 24000 ; # large transwell
+
+#  *5940.  2022 ipro 0120v12a au 0819a.
+#  *6400.  2023 xp 0118v07a au/0118a.
+#  *8770.  2022 xp0606 after xp tests.
+# *15539.  2023 ipro 0201v10a au/0201a.
 
 
-
-!pattern_file locup/pattern_05.data  # Default
 
 # For small millicells:
-# !pattern_file locup/pattern_01.data  # horiz10 plus N S, margin 1
-# !pattern_file locup/pattern_02.data  # horiz10 plus N S, margin 2 (larger)
-# !pattern_file locup/pattern_03.data  # central 6
-# !pattern_file locup/pattern_04.data  # central 8
-# !pattern_file locup/pattern_05.data  # central 6, wide spacing
-# !pattern_file locup/pattern_06.data  # central 8, wide spacing
+!pattern_file ; locup/pattern_01.data ; # horiz10 plus N S, margin 1
+!pattern_file ; locup/pattern_02.data ; # horiz10 plus N S, margin 2 (larger)
+!pattern_file ; locup/pattern_03.data ; # central 6
+!pattern_file ; locup/pattern_04.data ; # central 8
+!pattern_file ; locup/pattern_05.data ; # central 6, wide spacing
+!pattern_file ; locup/pattern_06.data ; # central 8, wide spacing
 
 # For large millicells:
-# !pattern_file locup/pattern_07.data   # 6 central FOVs
-# !pattern_file locup/pattern_08.data   # 8 central FOVs
+!pattern_file ; locup/pattern_07.data ;  # 6 central FOVs
+!pattern_file ; locup/pattern_08.data ;  # 8 central FOVs
 
 # For large millicell MCTDs:
-# !pattern_file locup/pattern_09.data  # 2 FOV, N S
-# !pattern_file locup/pattern_10.data  # 4 FOV (N W S E)
-# !pattern_file locup/pattern_11.data  # 8 FOV (N NW ... E NE)
-# !pattern_file locup/pattern_14.data  # 40 FOVs
-# !pattern_file locup/pattern_15.data  # 40 FOVs, cw (follows u-)
+!pattern_file ; locup/pattern_09.data ; # 2 FOV, N S
+!pattern_file ; locup/pattern_10.data ; # 4 FOV (N W S E)
+!pattern_file ; locup/pattern_11.data ; # 8 FOV (N NW ... E NE)
+!pattern_file ; locup/pattern_14.data ; # 40 FOVs
+!pattern_file ; locup/pattern_15.data ; # 40 FOVs, cw (follows u-)
 
 # For large transwell MCTDs:
-# !pattern_file locup/pattern_12.data # 8 FOVs
-# !pattern_file locup/pattern_13.data # 4 FOVs (N W S E)
-# !pattern_file locup/pattern_16.data # 4 FOV plus return N.
-# !pattern_file locup/pattern_17.data # 8 FOV plus return N.
-# !pattern_file locup/pattern_18.data # 4 FOV plus return N, cw (same as u-).
-# !pattern_file locup/pattern_19.data # 8 FOV plus return N, cw (same as u-).
-# !pattern_file locup/pattern_20.data # 4 FOV, cw (same as u-).
-# !pattern_file locup/pattern_21.data # 8 FOV, cw (same as u-).
-# !pattern_file locup/pattern_22.data # 8 central FOV, 6.5 mm t-clear.
+!pattern_file ; locup/pattern_12.data ; # 8 FOV
+!pattern_file ; locup/pattern_13.data ; # 4 FOV (N W S E)
+!pattern_file ; locup/pattern_16.data ; # 4 FOV plus return N.
+!pattern_file ; locup/pattern_17.data ; # 8 FOV plus return N.
+!pattern_file ; locup/pattern_18.data ; # 4 FOV plus return N, cw (same as u-).
+!pattern_file ; locup/pattern_19.data ; # 8 FOV plus return N, cw (same as u-).
+!pattern_file ; locup/pattern_20.data ; # 4 FOV, cw (same as u-).
+!pattern_file ; locup/pattern_21.data ; # 8 FOV, cw (same as u-).
+!pattern_file ; locup/pattern_22.data ; # 8 central FOV, 6.5 mm t-clear.
 
 
+#######################################################
+# Defaults.
+
+!culture_diam ;  8770 ; # 12mm millicell *8770.
+
+# Small millicell.
+!pattern_file ; locup/pattern_05.data ; # central 6, wide spacing
+#######################################################
 
 
