Do a huge number of bug fixes
Also allow adding !reset_multi_edges to muwp config
which overrides the plate file data.

--- a/config/muwp.config
+++ b/config/muwp.config
@@ -13,4 +13,8 @@
 
 !run_mode ; a ; # The default run mode, "a" or "b".
 
+!reset_multi_edges
+# Leaving this list blank here allows loading of
+# the !reset_multi_edges from the plate file.
+
 
