Add !end_of_data to muwp and locup configs

--- a/config/locup.config
+++ b/config/locup.config
@@ -1,4 +1,4 @@
-
+#
 
 !culture_diam ;  8770 ; # 12mm millicell *8770.
 !culture_diam ;  5940 ; # well from 96-well plate *5940
@@ -53,5 +53,7 @@
 # Small millicell.
 !pattern_file ; locup/pattern_05.data ; # central 6, wide spacing
 #######################################################
+
+!end_of_data
 
 
