--- a/config/muwp.config
+++ b/config/muwp.config
@@ -1,4 +1,4 @@
-
+#
 
 # !fname_plate ; muwp/plate_01_w6h.data
 !fname_plate ; muwp/plate_02_ladiholder.data
@@ -17,4 +17,5 @@
 # Leaving this list blank here allows loading of
 # the !reset_multi_edges from the plate file.
 
+!end_of_data
 
