Create muwp move system
This allows the user to move one FOV to right, left, up, down.
Or more than one FOV.
It has a memory to just repeat the last move.

--- a/config/muwp.config
+++ b/config/muwp.config
@@ -13,9 +13,15 @@
 
 !run_mode ; a ; # The default run mode, "a" or "b".
 
+# (udx, udy):  Distance to move using the move ("m") action.
+# These should usually be set to one FOV.
+!udx ; 307
+!udy ; 230
+
 !reset_multi_edges
 # Leaving this list blank here allows loading of
 # the !reset_multi_edges from the plate file.
+
 
 !end_of_data
 
