Create a way to choose from moves in config
This is for moving one fov at a time.  It depends on
the mag and SAVA fr/s.

--- a/config/muwp.config
+++ b/config/muwp.config
@@ -22,6 +22,13 @@
 # Leaving this list blank here allows loading of
 # the !reset_multi_edges from the plate file.
 
+!move_choice
+614 ; 461 ; sava 10x 120fr/s
+307 ; 230 ; sava 20x 120fr/s
+205 ; 154 ; sava 30x 120fr/s
+154 ; 115 ; sava 40x 120fr/s, 20x 300*fr/s
+102 ;  77 ; sava 60x 120fr/s
+ 51 ;  38 ; sava 60x 300*fr/s
 
 !end_of_data
 
