Add more to the !move_choice list
This adds some movements associated with the ocular view
and fiducial marks in that view.

--- a/config/muwp.config
+++ b/config/muwp.config
@@ -22,6 +22,12 @@
 1 ; N
 
 !move_choice
+778 ; 778 ; ocular max square FOV, 20x
+394 ; 394 ; ocular max square FOV, 40x
+257 ; 257 ; ocular max square FOV, 60x
+670 ; 450 ; ocular rectangle, 20x
+335 ; 225 ; ocular rectangle, 40x
+223 ; 150 ; ocular rectangle, 60x
 614 ; 461 ; sava 10x 120fr/s
 307 ; 230 ; sava 20x 120fr/s
 205 ; 154 ; sava 30x 120fr/s
